feat(workflow): Enhance job dependency handling and graph visualization
- Refactor `setup_dependencies` to better identify independent jobs, considering jobs with no predecessors and those connected to independent jobs by parallel or zero-delay relationships.
- Implement `build_graph` method with enhanced logging to visualize the graph structure, aiding in debugging and understanding of job interdependencies.
- Add unit tests for `build_graph` and `setup_dependencies` to ensure reliability and correct functionality of new features.
- Adjust logging configuration to include detailed debug information, especially useful for development and troubleshooting.

--- a/workflow_optimizer/notebooks/workflow_dependencies_job.ipynb
+++ b/workflow_optimizer/notebooks/workflow_dependencies_job.ipynb
@@ -28,18 +28,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-13 16:27:50.952 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:extract_and_sort_jobs:43 - Jobs extracted and sorted by start time.\n",
+      "2023-11-13 16:27:50.953 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:analyze_dependencies:105 - Dependencies analyzed and graph populated.\n",
+      "2023-11-13 16:27:50.954 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:find_nodes_with_multiple_incoming_edges:119 - Finding nodes with multiple incoming edges.\n",
+      "2023-11-13 16:27:50.956 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:find_nodes_with_multiple_incoming_edges:132 - Nodes with multiple incoming edges: [('371902', 2), ('371905', 3), ('371904', 4), ('371906', 5), ('371907', 6), ('371908', 7), ('371909', 8), ('371910', 9), ('371911', 10), ('371912', 11), ('371913', 12), ('371924', 13)]\n",
+      "2023-11-13 16:27:50.957 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371902\n",
+      "2023-11-13 16:27:50.958 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371902' of type 'delay'\n",
+      "2023-11-13 16:27:50.959 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371905\n",
+      "2023-11-13 16:27:50.959 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371905' of type 'delay'\n",
+      "2023-11-13 16:27:50.960 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371905' of type 'parallel'\n",
+      "2023-11-13 16:27:50.961 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371904\n",
+      "2023-11-13 16:27:50.962 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371904' of type 'delay'\n",
+      "2023-11-13 16:27:50.962 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371904' of type 'parallel'\n",
+      "2023-11-13 16:27:50.963 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371904' of type 'parallel'\n",
+      "2023-11-13 16:27:50.964 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371906\n",
+      "2023-11-13 16:27:50.965 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371906' of type 'delay'\n",
+      "2023-11-13 16:27:50.965 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371906' of type 'parallel'\n",
+      "2023-11-13 16:27:50.966 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371906' of type 'parallel'\n",
+      "2023-11-13 16:27:50.967 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371906' of type 'parallel'\n",
+      "2023-11-13 16:27:50.968 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371907\n",
+      "2023-11-13 16:27:50.968 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371907' of type 'delay'\n",
+      "2023-11-13 16:27:50.969 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371907' of type 'delay'\n",
+      "2023-11-13 16:27:50.970 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371907' of type 'delay'\n",
+      "2023-11-13 16:27:50.971 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371907' of type 'delay'\n",
+      "2023-11-13 16:27:50.971 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371907' of type 'delay'\n",
+      "2023-11-13 16:27:50.972 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371908\n",
+      "2023-11-13 16:27:50.973 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371908' of type 'delay'\n",
+      "2023-11-13 16:27:50.974 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371908' of type 'delay'\n",
+      "2023-11-13 16:27:50.974 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371908' of type 'delay'\n",
+      "2023-11-13 16:27:50.975 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371908' of type 'delay'\n",
+      "2023-11-13 16:27:50.976 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371908' of type 'delay'\n",
+      "2023-11-13 16:27:50.977 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371906' to '371908' of type 'delay'\n",
+      "2023-11-13 16:27:50.977 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371909\n",
+      "2023-11-13 16:27:50.978 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371909' of type 'delay'\n",
+      "2023-11-13 16:27:50.979 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371907' to '371909' of type 'parallel'\n",
+      "2023-11-13 16:27:50.980 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371908' to '371909' of type 'parallel'\n",
+      "2023-11-13 16:27:50.980 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371909' of type 'sequential'\n",
+      "2023-11-13 16:27:50.981 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371909' of type 'sequential'\n",
+      "2023-11-13 16:27:50.982 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371909' of type 'sequential'\n",
+      "2023-11-13 16:27:50.983 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371909' of type 'sequential'\n",
+      "2023-11-13 16:27:50.983 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371910\n",
+      "2023-11-13 16:27:50.984 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371910' of type 'delay'\n",
+      "2023-11-13 16:27:50.985 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371907' to '371910' of type 'parallel'\n",
+      "2023-11-13 16:27:50.986 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371908' to '371910' of type 'parallel'\n",
+      "2023-11-13 16:27:50.986 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371909' to '371910' of type 'parallel'\n",
+      "2023-11-13 16:27:50.987 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371910' of type 'sequential'\n",
+      "2023-11-13 16:27:50.988 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371910' of type 'sequential'\n",
+      "2023-11-13 16:27:50.989 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371910' of type 'sequential'\n",
+      "2023-11-13 16:27:50.989 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371910' of type 'sequential'\n",
+      "2023-11-13 16:27:50.990 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371911\n",
+      "2023-11-13 16:27:50.991 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371911' of type 'delay'\n",
+      "2023-11-13 16:27:50.992 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371907' to '371911' of type 'parallel'\n",
+      "2023-11-13 16:27:50.992 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371908' to '371911' of type 'parallel'\n",
+      "2023-11-13 16:27:50.993 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371909' to '371911' of type 'parallel'\n",
+      "2023-11-13 16:27:50.994 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371910' to '371911' of type 'parallel'\n",
+      "2023-11-13 16:27:50.995 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371911' of type 'sequential'\n",
+      "2023-11-13 16:27:50.995 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371911' of type 'sequential'\n",
+      "2023-11-13 16:27:50.996 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371911' of type 'sequential'\n",
+      "2023-11-13 16:27:50.997 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371911' of type 'sequential'\n",
+      "2023-11-13 16:27:50.998 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371912\n",
+      "2023-11-13 16:27:50.998 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371912' of type 'delay'\n",
+      "2023-11-13 16:27:50.999 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371912' of type 'delay'\n",
+      "2023-11-13 16:27:51.000 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371912' of type 'delay'\n",
+      "2023-11-13 16:27:51.001 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371912' of type 'delay'\n",
+      "2023-11-13 16:27:51.001 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371912' of type 'delay'\n",
+      "2023-11-13 16:27:51.002 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371906' to '371912' of type 'delay'\n",
+      "2023-11-13 16:27:51.003 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371907' to '371912' of type 'parallel'\n",
+      "2023-11-13 16:27:51.004 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371908' to '371912' of type 'parallel'\n",
+      "2023-11-13 16:27:51.005 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371909' to '371912' of type 'parallel'\n",
+      "2023-11-13 16:27:51.005 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371910' to '371912' of type 'parallel'\n",
+      "2023-11-13 16:27:51.006 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371913\n",
+      "2023-11-13 16:27:51.007 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371913' of type 'delay'\n",
+      "2023-11-13 16:27:51.008 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371913' of type 'delay'\n",
+      "2023-11-13 16:27:51.009 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371913' of type 'delay'\n",
+      "2023-11-13 16:27:51.009 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371913' of type 'delay'\n",
+      "2023-11-13 16:27:51.010 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371913' of type 'delay'\n",
+      "2023-11-13 16:27:51.011 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371906' to '371913' of type 'delay'\n",
+      "2023-11-13 16:27:51.012 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371907' to '371913' of type 'parallel'\n",
+      "2023-11-13 16:27:51.012 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371908' to '371913' of type 'parallel'\n",
+      "2023-11-13 16:27:51.013 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371909' to '371913' of type 'parallel'\n",
+      "2023-11-13 16:27:51.014 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371910' to '371913' of type 'parallel'\n",
+      "2023-11-13 16:27:51.015 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371911' to '371913' of type 'parallel'\n",
+      "2023-11-13 16:27:51.015 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:176 - Cleaning redundancies for node: 371924\n",
+      "2023-11-13 16:27:51.016 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371900' to '371924' of type 'delay'\n",
+      "2023-11-13 16:27:51.017 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371903' to '371924' of type 'delay'\n",
+      "2023-11-13 16:27:51.018 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371902' to '371924' of type 'delay'\n",
+      "2023-11-13 16:27:51.019 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371905' to '371924' of type 'delay'\n",
+      "2023-11-13 16:27:51.019 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371904' to '371924' of type 'delay'\n",
+      "2023-11-13 16:27:51.020 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371906' to '371924' of type 'delay'\n",
+      "2023-11-13 16:27:51.021 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371907' to '371924' of type 'sequential'\n",
+      "2023-11-13 16:27:51.022 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371908' to '371924' of type 'sequential'\n",
+      "2023-11-13 16:27:51.022 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371909' to '371924' of type 'sequential'\n",
+      "2023-11-13 16:27:51.023 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371910' to '371924' of type 'sequential'\n",
+      "2023-11-13 16:27:51.024 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371911' to '371924' of type 'sequential'\n",
+      "2023-11-13 16:27:51.025 | DEBUG    | workflow_optimizer.job_dependency_analyzer_nx:remove_edges_by_priority:160 - Removed edge from '371912' to '371924' of type 'sequential'\n",
+      "2023-11-13 16:27:51.025 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:179 - Redundancy cleaning complete.\n",
+      "2023-11-13 16:27:51.026 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:analyze_dependencies:107 - Redundancy removed.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-11-06 16:43:24.958 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:extract_and_sort_jobs:43 - Jobs extracted and sorted by start time.\n",
       "{'371900': {'start_time': 1687960640000, 'end_time': 1687960640000}, '371903': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371902': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371905': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371904': {'start_time': 1687960690000, 'end_time': 1687960775000}, '371906': {'start_time': 1687960695000, 'end_time': 1687960775000}, '371907': {'start_time': 1687960755000, 'end_time': 1687964360000}, '371908': {'start_time': 1687960765000, 'end_time': 1687964360000}, '371909': {'start_time': 1687960770000, 'end_time': 1687964390000}, '371910': {'start_time': 1687960775000, 'end_time': 1687964390000}, '371911': {'start_time': 1687960780000, 'end_time': 1687964390000}, '371912': {'start_time': 1687960785000, 'end_time': 1687964390000}, '371913': {'start_time': 1687960790000, 'end_time': 1687964390000}, '371924': {'start_time': 1687964500000, 'end_time': 1687964500000}}\n",
-      "2023-11-06 16:43:24.959 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:analyze_dependencies:105 - Dependencies analyzed and graph populated.\n",
-      "2023-11-06 16:43:24.961 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:clean_redundancy:179 - Redundancy cleaning complete.\n",
-      "2023-11-06 16:43:24.961 | INFO     | workflow_optimizer.job_dependency_analyzer_nx:analyze_dependencies:107 - Redundancy removed.\n",
       "Edges data has been dumped to /home_nfs/mimounis/iosea-wp3-recommandation-system/dataset_generation/dataset_deep/ECMWF-649c3c40cc9340246f87cb58/ECMWF-649c3c40cc9340246f87cb58_edges.json\n"
      ]
     },
